# simple-claude-code-session-manager

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: fonts.css  main.ts  style.css  terminal.css  terminal.ts  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
